syntax = "proto3";

package common;

enum ResourceStatus {
    UNKNOWN = 0;
    PENDING = 1;
    RUNNING = 2;
    FAILED = 3;
    TERMINATED = 4;
    CREATING = 5;
    DESTROYING = 6;
}

enum WorkloadRequestKind {
    CREATE = 0;
    DESTROY = 1;
}

message WorkerRegistration {
    string hostname = 1;
}


// Metrics definition for Workers
message WorkerMetric {
    ResourceStatus status = 1;
    string metrics = 2;
}

// Metrics definition for WorkLoad instances
message InstanceMetric {
    ResourceStatus status = 1;
    string metrics = 2;
    string instance_id = 3;
}

// Definition of metrics send by node
message WorkerStatus {
    oneof status {
        InstanceMetric instance = 1;
        WorkerMetric worker = 2;
    }
    string identifier = 3;
    optional string host_address = 4;
}
