syntax = "proto3";

import "common.proto";
import "google/protobuf/empty.proto";

package controller;


// Simple WorkLoad description
message WorkloadScheduling {
    string workload_id = 1;
    string definition = 2;
    common.WorkloadRequestKind action = 3;
    string instance_id = 4;
}

// The Scheduler service for the Controller
service Controller {
    // A request for scheduling an instance of a workload.
    // Success means the instance is pending.
    rpc ScheduleInstance(WorkloadScheduling) returns (google.protobuf.Empty);

    // Get worker and instances status updates.
    // Returns a stream of Status messages.
    rpc GetStatusUpdates(google.protobuf.Empty) returns (stream common.WorkerStatus);
}
